fixes for production

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "dizzy-store",
     "description": "Simple state management library for JS apps.",
     "version": "1.0.0",
-    "main": "dist/dizzy-store-esm.js",
+    "main": "dist/dizzy-store.esm.js",
     "scripts": {
         "build": "webpack --config webpack.config.js --mode production",
         "test": "jest"
